Some minor changes in the instructions

--- a/index.html
+++ b/index.html
@@ -6,24 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1 style="text-decoration: underline;">Welcome!</h1>
     <h2>To use my sudoku solver follow the instructions</h2>
     <h3>Instructions:</h3>
-    <p>1- Open the console with f12 or left click and then 'developer tools'</p>
-    <p>2- in the console write a new variable but do not use 'sudoku': let newSudoku = [[Here you insert your Sudoku]]</p>
+    <p>1- Open the console with f12 or left click and then 'developer tools'.</p>
+    <p>2- in the console write a new variable: let newSudoku = [[Here you insert your Sudoku]].</p>
     <p>Example: let newSudoku1 = [[1, 5, 0, 0, 4, 2, 0, 0, 6], 
         [2, 7, 4, 5, 6, 0, 0, 1, 0], 
         [0, 0, 6, 0, 0, 7, 4, 0, 2], 
         [0, 1, 0, 0, 0, 0, 0, 4, 0], 
-        [0, 0, 0, 0, 5, 0, 0, 0, 0],
+        [0, 0, 0, 0, 5, 0, 0, 0, 0],<br>
         [0, 6, 0, 4, 0, 3, 1, 9, 0],
         [0, 2, 0, 6, 0, 5, 9, 0, 0],
         [9, 8, 5, 0, 3, 0, 0, 6, 0],
         [0, 4, 0, 2, 1, 9, 8, 3, 0]];</p>
-    <p>Every opening of square brackets is a new Sudoku row</p>
-    <p>then click enter, your sudoku variable is created</p>
-    <p>To solve the sudoku write this in the console: solveIt("your sudoku name");</p>
-    <p>Magic!! Your sudoku is solved! Hope you enjoyed it and don't abuse of this the sudokus are also fun to do with algorithm!</p>
+    <p>Every opening of square brackets is a new Sudoku row.</p>
+    <p>3- Then click enter, your sudoku variable is created, you should get undefined</p>
+    <p>4- To solve the sudoku write this in the console: solveIt("your sudoku name");. You should get "true".</p>
+    <p>5- To see the completed Sudoku write: "console.log(sudoku)";. You should get an array, click on it ... AND THEN...</p>
+    <p>6- Magic!! Your sudoku is solved! Hope you enjoyed it and don't abuse this! Because sudokus are also fun to do without algorithms!</p>
     
     <script src="script.js"></script>
 </body>
